@@ -1,3 +1,9 @@
+2008-01-29  Mike Krüger <mkrueger@novell.com> 
+
+	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs,
+	  MonoDevelop.SourceEditor/SourceEditorView.cs: Worked on bookmark
+	  commands.
+
 2008-01-25  Mike Krüger <mkrueger@novell.com> 
 
 	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs,
